<resources>
    <!--Names app-->
    <string name="app_name">Bookstore2</string>
    <!--Adds a book-->
    <string name="add_new_book">Add a book</string>
    <!--Edits a book-->
    <string name="edit_book">Edit</string>
    <!--Adds product name category-->
    <string name="category_product_name">Product name category</string>
    <!--Product name hint-->
    <string name="hint_product_name">Product name?</string>
    <!--Save action-->
    <string name="action_save">Save?</string>
    <!--Price-->
    <string name="price">Price</string>
    <!--Book price hint-->
    <string name="hint_book_price">Book price?</string>
    <!--Quantity-->
    <string name="quantity">Quantity</string>
    <!--Adds quantity hint-->
    <string name="hint_quantity">Quantity?</string>

    <string name="supplier_category">Supplier category</string>
    <string name="hint_supplier">Supplier?</string>
    <string name="hint_supplier_phone_number">Supplier phone number?</string>
    <string name="editor_update_book_failed">Editor update failed!</string>
    <string name="editor_update_book_successful">Editor update successful!</string>
    <string name="editor_insert_book_successful">Editor insert successful!</string>
    <string name="editor_insert_book_failed">Editor insert failed!</string>
    <string name="delete_success">Deletion na success!</string>
    <string name="books_delete_failed">Book deletions failed?!?</string>
    <string name="empty_view_title_text">Notin dey here!</string>
    <string name="empty_view_subtitle_text">Add something o: \n Name, Price or Quantity! \n Click the Pink button!</string>
    <string name="out_of_stock_toast">Out of stock</string>


    <string name="sell">Sell</string>
    <string name="book_name_hint">book name hint</string>

    <string name="action_delete_all_entries">Delete all entries?</string>
    <string name="action_insert_dummy_data">Insert dummy data</string>
    <string name="action_add">Add action</string>

    <string name="prod_name">Toto</string>
    <string name="col_price">$10</string>
    <string name="col_quantity">10</string>
    <string name="sup_name">Elegushi</string>
    <string name="sup_phone">7779978414</string>
    <string name="deButton2">-</string>
    <string name="inButton1">+</string>
    <string name="action_delete">Delete?</string>
    <string name="unsaved_changes_dialog_msg">Any unsaved changes?</string>
    <string name="discard">Troway?</string>
    <string name="keep_editing">Keep on?</string>
    <string name="delete_dialog_msg">Abi you wan delete?</string>
    <string name="delete">Delete?</string>
    <string name="editor_delete_book_failed">Deletion failed!</string>
    <string name="editor_delete_book_successful">Deletion a success.</string>
</resources>
