<?xml version="1.0" encoding="utf-8"?>
    <!-- Copyright (C) 2016 The Android Open Source Project
         Licensed under the Apache License, Version 2.0 (the "License");
         you may not use this file except in compliance with the License.
         You may obtain a copy of the License at
              http://www.apache.org/licenses/LICENSE-2.0
         Unless required by applicable law or agreed to in writing, software
         distributed under the License is distributed on an "AS IS" BASIS,
         WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
         See the License for the specific language governing permissions and
         limitations under the License.
    -->
    <!-- Layout for the editor -->
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:padding="5dp"
tools:context=".EditorActivity">

<!-- Product category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_product_name"
            style="@style/CategoryStyle" />

        <!-- Input field -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_product_name"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords"
                style="@style/EditorStyle" />
         </LinearLayout>
    </LinearLayout>


<!-- Price category -->
<LinearLayout
    android:id="@+id/price"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <!-- Label -->
    <TextView
        android:text="@string/price"
        style="@style/CategoryStyle" />

    <!-- Input fields -->
    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:paddingLeft="4dp">

        <!-- pRICE field -->
        <EditText
            android:id="@+id/edit_book_price"
            android:hint="@string/hint_book_price"
            android:inputType="number"
            style="@style/EditorStyle" />

    </RelativeLayout>
</LinearLayout>

<!-- Quantity category -->
    <LinearLayout
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:layout_width="115dp"
            android:layout_height="34dp"
            android:text="@string/quantity" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="4dp">

        <!-- Quantity field -->
        <EditText
            android:id="@+id/edit_quantity"
            style="@style/EditorStyle"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:hint="@string/hint_quantity"
            android:inputType="number" />
            <!--android:layout_weight=".5"-->


        <Button
            android:id="@+id/action_increase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:onClick=""
            android:text="+"

            />

        <Button
            android:id="@+id/action_decrease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:onClick=""
            android:text="-" />

    </RelativeLayout>

    </LinearLayout>

<!-- Supplier category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/supplier_category"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_supplier_name"
                android:hint="@string/hint_supplier"
                android:inputType="textCapWords"
                style="@style/EditorStyle" />

            <!-- Ph. # field -->
            <EditText
                android:id="@+id/edit_supplier_phone_number"
                android:hint="@string/hint_supplier_phone_number"
                android:inputType="textCapWords"
                style="@style/EditorStyle" />

            <ImageView
                android:id="@+id/action_call"
                android:layout_width="wrap_content"
                android:layout_height="47dp"
                android:onClick=""
                android:src="@drawable/phone" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>